nginx-deployment-customized.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.29
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
          volumeMounts:
            - name: config-dir
              mountPath: /etc/nginx/conf.d
            - name: config-templates
              mountPath: /etc/nginx/templates
            - name: tls-certs
              mountPath: /etc/nginx/certs
            - name: storage
              mountPath: /storage
      volumes:
        - name: config-dir
          emptyDir: {}
        - name: config-templates
          configMap:
            name: nginx-config-templates
        - name: tls-certs
          secret:
            secretName: nginx-tls
        - name: storage
          persistentVolumeClaim:
            claimName: nginx-pv-claim
